--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--People Table View Controller-->
+        <!--People-->
         <scene sceneID="T4K-GM-nq4">
             <objects>
                 <tableViewController id="8fh-2r-njT" customClass="PeopleTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="80" id="rcQ-HS-31j" customClass="PeopleTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PeopleCell" rowHeight="80" id="rcQ-HS-31j" customClass="PeopleTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rcQ-HS-31j" id="fNB-Dr-1Az">
@@ -26,16 +26,16 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GSQ-eX-K8i">
-                                            <rect key="frame" x="0.0" y="0.0" width="341" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="79"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WkC-0u-dbV">
-                                                    <rect key="frame" x="8" y="8" width="46.5" height="63.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WkC-0u-dbV">
+                                                    <rect key="frame" x="8" y="8" width="46.5" height="63"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="WkC-0u-dbV" secondAttribute="height" multiplier="25:34" id="zyB-HW-glr"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NeY-Ov-fHj">
-                                                    <rect key="frame" x="62.5" y="29.5" width="270.5" height="21"/>
+                                                    <rect key="frame" x="62.5" y="29" width="270.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -47,6 +47,7 @@
                                                 <constraint firstItem="WkC-0u-dbV" firstAttribute="leading" secondItem="GSQ-eX-K8i" secondAttribute="leading" constant="8" id="HCJ-TY-DWt"/>
                                                 <constraint firstAttribute="bottom" secondItem="WkC-0u-dbV" secondAttribute="bottom" constant="8" id="SLj-Jj-vat"/>
                                                 <constraint firstAttribute="trailing" secondItem="NeY-Ov-fHj" secondAttribute="trailing" constant="8" id="ZYd-GU-X0d"/>
+                                                <constraint firstAttribute="width" secondItem="GSQ-eX-K8i" secondAttribute="height" multiplier="341:79" id="dRQ-04-9zq"/>
                                                 <constraint firstItem="NeY-Ov-fHj" firstAttribute="leading" secondItem="WkC-0u-dbV" secondAttribute="trailing" constant="8" id="hQF-IH-M5U"/>
                                                 <constraint firstItem="NeY-Ov-fHj" firstAttribute="leading" secondItem="WkC-0u-dbV" secondAttribute="trailing" constant="8" id="lhU-Ae-1tP"/>
                                                 <constraint firstItem="NeY-Ov-fHj" firstAttribute="centerY" secondItem="GSQ-eX-K8i" secondAttribute="centerY" id="tua-qN-qyJ"/>
@@ -73,7 +74,7 @@
                             <outlet property="delegate" destination="8fh-2r-njT" id="1e9-ni-a2c"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="yBH-ij-MnE"/>
+                    <navigationItem key="navigationItem" title="People" id="yBH-ij-MnE"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YZR-bm-qfM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -84,8 +85,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NAS-Af-4zT" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CDO-8M-b4n">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="CDO-8M-b4n">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
